fixed announcements error for PO packages
