# Backend/src/routes/seatRoutes.js
@@ -1,9 +1,11 @@
 import express from 'express';
-import { getSections, getSeatsBySection } from '../controllers/seatController.js';
+import { getSections } from '../controllers/seatController.js';
 
 const router = express.Router();
 
 router.get('/sections', getSections);
-router.get('/sections/:id/seats', getSeatsBySection);
+
+// Seats - Phase 3
+// router.get('/sections/:id/seats', getSeatsBySection);
 
 export default router;
